--- a/src/HairBand/Views/Home/About.cshtml
+++ b/src/HairBand/Views/Home/About.cshtml
@@ -1,7 +1,17 @@
-﻿@{
+﻿@model IEnumerable<string>
+
+@{
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+
+
+@foreach (var page in Model)
+{
+
+    <a href="/@page">@page</a>
+
+}
