--- a/src/HairBand/Views/Home/Page.cshtml
+++ b/src/HairBand/Views/Home/Page.cshtml
@@ -1,11 +1,28 @@
-﻿@*
+﻿@model PageData
+
+@*
+   
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
     // ViewBag.Title = "Home Page";
-    ViewBag.Title = "Page";
+    ViewBag.Title = Model.Settings["title"];
 }
-<h1>Dynamic Page: @ViewBag.Page</h1>
-@ViewBag.PagePath
+<h1>@ViewBag.Title</h1>
 
-@Html.Raw(ViewBag.Html)
+<div>
+    @Html.Raw(Model.Content)
+</div>
+
+
+@if(Model.Settings.ContainsKey("posted"))
+{
+    <span>
+        @(DateTime.Parse(Model.Settings["posted"]).ToLongDateString())
+    </span>
+}
+
+@if(Model.Settings.ContainsKey("author"))
+{
+    <span>@Model.Settings["author"]</span>
+}
