--- a/src/HairBand/Views/Home/About.cshtml
+++ b/src/HairBand/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<string>
+﻿@model IEnumerable<PageData>
 
 @{
     ViewBag.Title = "About";
@@ -12,6 +12,6 @@
 @foreach (var page in Model)
 {
 
-    <a href="/@page">@page</a>
+    <a href="/pages/@page.Url">@page.Settings["title"]</a>
 
 }
