--- a/src/HairBand/Views/_GlobalImport.cshtml
+++ b/src/HairBand/Views/_GlobalImport.cshtml
@@ -1,4 +1,5 @@
-﻿@using HairBand
+﻿@using System;
+@using HairBand
 @using HairBand.Models
 @using Microsoft.Framework.OptionsModel
 @using Microsoft.AspNet.Identity
