--- a/src/HairBand/Views/Account/Login.cshtml
+++ b/src/HairBand/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.Generic
 @using Microsoft.AspNet.Http
 @using Microsoft.AspNet.Http.Authentication
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<BandMember> SignInManager
 
 @{
     ViewBag.Title = "Log in";
