more user store

--- a/src/HairBand/Views/Pages/Index.cshtml
+++ b/src/HairBand/Views/Pages/Index.cshtml
@@ -7,6 +7,6 @@
 @foreach (var page in Model)
 {
 
-    <a href="/pages/@page.Url">@page.Metadata.title</a>
+    <a href="/@page.Url">@page.Metadata.title</a>
 
 }
