--- a/src/HairBand/Views/Shared/_TemplateLayout.cshtml
+++ b/src/HairBand/Views/Shared/_TemplateLayout.cshtml
@@ -14,7 +14,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">@AppSettings.Options.SiteTitle</a>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">@AppSettings.Options.Title</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
