setting up site config and refactoring logic out of page controller to html rendering engine

--- a/src/HairBand/Views/Pages/Page.cshtml
+++ b/src/HairBand/Views/Pages/Page.cshtml
@@ -1,7 +1,7 @@
-﻿@model PageData
+﻿@model IDictionary<string, object>
 @{ 
 
     Layout = "";
-    ViewBag.Title = Model.Metadata.title;
+    ViewBag.Title = Model["title"];
 }
 @Html.Raw(ViewBag.Content as String)
