provider data working with objects, view updated, controller needs clean up. starting on dynamic navbar rif

--- a/src/HairBand/Views/Pages/Page.cshtml
+++ b/src/HairBand/Views/Pages/Page.cshtml
@@ -1,7 +1,5 @@
-﻿@model IDictionary<string, object>
+﻿@model string
 @{ 
-
     Layout = "";
-    ViewBag.Title = Model["title"];
 }
-@Html.Raw(ViewBag.Content as String)
+@Html.Raw(Model)
