--- a/src/HairBand/Themes/Happy/_footer.liquid
+++ b/src/HairBand/Themes/Happy/_footer.liquid
@@ -1,7 +1,7 @@
 
 <hr />
 <footer>
-    <p>&copy; My Year {{current_date}} - {{site.title}}</p>
+    <p>&copy; My Year {{site.time}} - {{site.name}}</p>
 </footer>
 
 <script src="{{theme_folder}}/lib/jquery/jquery.js"></script>
