--- a/src/HairBand/Themes/Happy/_default.liquid
+++ b/src/HairBand/Themes/Happy/_default.liquid
@@ -2,18 +2,20 @@
 <html>
     {% include 'head' %}
 <body>
-   {% include 'navbar' %}
+    {% include 'navbar' %}
     <div class="container body-content">
 
         <h1>{{page.title}}</h1>
         {% block content %}
+        {{content}}
+        {%endblock%}
 
+        Pages:<br />
         {% for item in site.pages %}
-         PAGE: {{item.title}}<br />
+        PAGE: {{item.title}}<br />
         {% endfor %}
 
         {% include 'footer' %}
     </div>
 </body>
 </html>
-
