protected folders filter, admin setup

--- a/src/HairBand/Areas/Admin/Views/Admin/Setup.cshtml
+++ b/src/HairBand/Areas/Admin/Views/Admin/Setup.cshtml
@@ -6,6 +6,6 @@
 }
 
 <form action="" method="post">
-    Enable Admin: <input type="checkbox" name="admin_enabled" value="true" />
+    Enable Admin: <input type="checkbox" name="AdminEnabled" value="true" checked="checked" />
     <button type="submit" class="btn">Install</button>
 </form>
