--- a/src/HairBand/Views/Shared/_Layout.cshtml
+++ b/src/HairBand/Views/Shared/_Layout.cshtml
@@ -30,13 +30,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">@AppSettings.Options.Test</a>
+                    <a href="/" class="navbar-brand">Home</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li><a href="/">Home</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
