--- a/src/HairBand/Views/Shared/_Layout.cshtml
+++ b/src/HairBand/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewBag.Title - @AppSettings.Options.Test</title>
+    <title>@ViewBag.Title - @AppSettings.Options.Title</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
@@ -47,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2015 - @AppSettings.Options.Test</p>
+            <p>&copy; 2015 - @AppSettings.Options.Title</p>
         </footer>
     </div>
 
